<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AccidentManager</string>
    
    <!-- String for Main Dashboard -->
    <string name="add_new">Add New</string>
    <string name="view_existing">View Existing</string>
    <string name="where_am_i">Where am I?</string>
    <string name="emergency">Call 911</string>
    <string name="towtruck">Call Tow-truck</string>
    <string name="dashboard_action">Action</string>
    
    <string name="description_logo">Google I/O 2010</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_share">Share</string>
    <string name="description_export">Export</string>
    <string name="description_star">Star</string>
    <string name="now_playing_loading">Looking up nearby sessions\u2026</string>
    <string name="hello">Hello</string>
    
    <!--Strings for Dashboard_Add_New -->
    <string name="vehicles_involved">Vehicles</string>
    <string name="witnesses">Witnesses</string>
    <string name="police_officers">Police Officers</string>
    <string name="people_involved">People Involved</string>
    <string name="add_new_dashboard_helper">Click a button to enter information</string>
	
	<!-- Strings for contacts_list -->
	<string name="no_contacts">No contacts</string>
	<string name="add_button">Add</string>
	<string name="done_button">Done</string>
	<string name="menu_insert">Insert</string>
	<string name="menu_delete">Delete</string>
	
	<!-- Strings for Add People Involved -->
	<string name="confirm">Confirm</string>
	<string name="cancel_button">Cancel</string>
	
	<!-- Strings for Alert Dialog -->
	<string name="unsaved_changes_title">Unsaved Changes</string>
	<string name="unsaved_changes_message">You have unsaved changes</string>
	<string name="add_contact">Add</string>
	<string name="discard">Discard</string>
	

</resources>
