<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <View style="@style/TitleBarSpring" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="@string/description_refresh"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onActionBarButtonClick" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />
        
        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_map"
            android:onClick="onActionBarButtonClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_menu_camera_view"
            android:onClick="onActionBarButtonClick" />

        <ImageView style="@style/TitleBarSeparator" />
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_search"
            android:src="@drawable/ic_title_search"
            android:onClick="onActionBarButtonClick" />
          
    </LinearLayout>
    
    <TableLayout
		android:id="@+id/TableLayout01"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:stretchColumns="1"
		android:shrinkColumns="*">
		<TableRow
			android:id="@+id/TableRow04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
   			<Gallery
				android:layout_span="2"
				android:id="@+id/GalleryOfPics"
				android:layout_height="wrap_content" android:layout_width="fill_parent" android:scrollbars="horizontal"></Gallery>
  		</TableRow>
  		<TableRow
			android:id="@+id/TableRow04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
            <EditText android:id="@+id/phone"
           		android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:scrollbars="vertical" 
				android:hint="first name"/>
				</TableRow>
				
		<TableRow
			android:id="@+id/TableRow04"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			<EditText android:id="@+id/phone"
           		android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:scrollbars="vertical" 
				android:hint="last name"/>
				</TableRow>
	</TableLayout>
</LinearLayout>
